--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,57 @@
 }
 
 body{
-color: var(--primary-text-color);
-font-family: Roboto, sans-serif;
-letter-spacing: 0.03em;
-background: #FFFFFF;
+    color: var(--primary-text-color);
+    font-family: Roboto, sans-serif;
+    letter-spacing: 0.03em;
+    background: #FFFFFF;
+}
+
+.container{
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+   
+}
+
+.h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+    margin: 0;
+}
+
+.link{
+    text-decoration: none;
+}
+
+.list{
+    display: flex;
+    flex-wrap: wrap;
+    
+    padding: 0;
+    margin: 0;
+
+    list-style: none;
+}
+
+.desc{
+    display: flex;
+    flex-wrap: nowrap;
+    padding: 0;
+    margin: 0:
+}
+
+.desc.feature{
+margin-right: 3opx;
+}
+
+.img{
+    display: block;
 }
 
 /* Header */
@@ -22,6 +69,8 @@ background: #FFFFFF;
 }
 
 .logo-link {
+    margin-right: 93px;
+
     color: var(--text-accent); 
     font-family: 'Raleway';
     font-weight: 700;
@@ -30,11 +79,28 @@ background: #FFFFFF;
     text-decoration: none;                                         
 }
 
-.list{
-    list-style: none;
+
+
+/* Navigation */
+
+.main-nav{
+    display: flex;
+    align-items: center;
+}
+
+.site-nav{
+    display: flex;
+}
+
+.site-nav .item:not(:last-child){
+    margin-right: 50px;
 }
 
 .site-nav .link{
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    
     color: var(--title-text-color);
     font-weight: 500;
     font-size: 14px;
@@ -50,6 +116,15 @@ background: #FFFFFF;
 
 .site-nav .link.current{
     color: var(--text-accent);
+}
+
+.site-address{
+    display: flex;
+    margin-left: auto;
+}
+
+.site-address .item:not(:last-child){
+    margin-right: 50px;
 }
 
 .site-address .link{
@@ -69,10 +144,19 @@ background: #FFFFFF;
 /* Main */
 
 .hero{
+    text-align: center;
+    padding: 200px 452px;
+   
     background: #2F303A;
+   
     }
 
 .hero-title{
+    margin-top: 0;
+    margin-bottom: 30px;
+
+    outline: 2px solid: tomato;
+   
     color: #FFFFFF;;
     font-weight: 900;
     font-size: 44px;
@@ -82,6 +166,12 @@ background: #FFFFFF;
 }
 
 .button{
+    text-align: center;
+    border-radius: 4px;
+    padding: 9px 31px;
+    min-width: 216px;
+    
+
     color: #FFFFFF;
     background: var(--text-accent);
     font-family: 'Roboto';
@@ -98,16 +188,42 @@ background: #FFFFFF;
     color: #FFFFFF;
 }
 
+.section{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.section-title{
+    margin-top: 0;
+    margin-bottom: 10px;
+    text-align: center;
+    
+    color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+}
+
 .images-title, 
 .team-title{
+    margin-bottom: 50px;
+    text-align: center;
+
     color: var(--title-text-color);
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
+    line-height: 1.17; 
 }
 
+
+.desc section{
+    margin-top: 0;
+    }
+
 .desc-title{
+    margin-bottom: 10px;
+    text-align: center;
+
     color: var(--title-text-color);
     font-weight: 700;
     font-size: 14px;
@@ -116,16 +232,26 @@ background: #FFFFFF;
 }
 
 .desc .text{
+    margin-bottom: 0;
+
     color: var(--primary-text-color);
     font-size: 14px;
     line-height: 1.71;
 }
 
-.section-title{
-    color: var(--title-text-color);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
+.image .list, 
+.team .list{
+    gap: 30px;
+}
+
+.box .list {
+width: 370px;
+margin-right: 30px;
+}
+
+.box{
+width: 370px;
+margin-right: 30px;
 }
 
 .team{
@@ -138,17 +264,27 @@ background: #FFFFFF;
     line-height: 1.19;
 }
 
+/* .team > .list{
+gap: 30px:
+} */
+
 .picture{
     background: #FFFFFF;
-}
+} 
 
 /* Footer */
 
 .footer{
+    padding-top: 60px;
+    padding-bottom: 60px;
+  
+
     background: #2F303A;
 }
 
 .footer-logo{
+    margin-bottom: 20px;
+   
     color: #FFFFFF;
     font-family: 'Raleway';
     font-weight: 700;
@@ -156,11 +292,22 @@ background: #FFFFFF;
     line-height: 1.2;
 }
 
+.footer .logo-link{
+    margin-right: 0;
+}
+
 .footer .text{
+    margin-bottom: 9px;
+
     color: #FFFFFF;
     font-size: 14px;
     font-style: normal;
     line-height: 1.71; 
+}
+
+.footer-address{
+    display: block; 
+    margin-bottom: 9px;
 }
 
 .footer-address .link{
@@ -174,9 +321,30 @@ background: #FFFFFF;
     color: var(--text-accent);
 }
 
+.footer-address .item:not(:last-child){
+    margin-bottom: 9px;
+}
+
 /* Portfolio */
 
+.list-button{
+    display: flex;
+    justify-content: center;
+    margin: 100px 0 50px 0;
+}
+
+.list-button .item:not(:last-child){
+    margin-right: 8px;
+}
+
 .list-button .link{
+    border-radius: 4px;
+    padding: 6px 22px;
+    min-width: 125px;
+    min-height: 38px;
+    margin-bottom: 50px;
+
+
     background: #F5F4FA;
     color: var(--title-text-color);
     cursor: pointer;
@@ -192,6 +360,39 @@ background: #FFFFFF;
     background: var(--text-accent);
     color: #FFFFFF;;
 }
+
+.project-container{
+    display: flex;
+    flex-wrap: wrap;
+    width: 1230px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.project-list{
+    display: flex;
+    /* flex-wrap: wrap; */
+    /* gap: 30px; */
+}
+
+.element{
+    width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    /* width: calc((100%-60px)/3);
+    margin-right: 30px; 
+} */
+
+.element:nth-child(3n){
+    margin-right: 0;
+}
+
+.element:nth-child(-n+3){
+    margin-bottom: 0;
+}
+
 
 .portfolio-title{
     color: var(--title-text-color);
