--- a/css/styles.css
+++ b/css/styles.css
@@ -16,49 +16,46 @@ body{
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
-    margin-right: auto;
-   
+    margin-right: auto; 
 }
 
-.h1,
+h1,
 h2,
 h3,
-h4,
-h5,
-h6{
+p,
+ul,
+li
+{
     margin: 0;
-}
-
-.link{
-    text-decoration: none;
-}
-
-.list{
-    display: flex;
-    flex-wrap: wrap;
-    
     padding: 0;
-    margin: 0;
+}
 
+ul{
     list-style: none;
 }
 
-.desc{
-    display: flex;
-    flex-wrap: nowrap;
-    padding: 0;
-    margin: 0:
+link{
+    display: block;
+    text-decoration: none;
 }
 
-.desc.feature{
-margin-right: 3opx;
-}
-
-.img{
+img{
     display: block;
 }
 
+
+.list{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
 /* Header */
+
+/* Logo */
+.header{
+    border-bottom: 1px solid #ECECEC;;
+}
 
 .header-logo{
     color: #000000;
@@ -79,22 +76,23 @@ margin-right: 3opx;
     text-decoration: none;                                         
 }
 
-
-
 /* Navigation */
 
-.main-nav{
+.container.wrap{
+    display: flex;
+    align-items: center;
+}
+
+.mein-nav{
     display: flex;
     align-items: center;
 }
 
 .site-nav{
-    display: flex;
+    display: flex; 
+    gap: 50px; 
 }
 
-.site-nav .item:not(:last-child){
-    margin-right: 50px;
-}
 
 .site-nav .link{
     display: block;
@@ -119,19 +117,20 @@ margin-right: 3opx;
 }
 
 .site-address{
-    display: flex;
-    margin-left: auto;
+ display: flex;
+  margin-left: auto;
+  gap: 50px;
 }
 
-.site-address .item:not(:last-child){
-    margin-right: 50px;
+.site-address-item + .item{
+margin-left: 50px;
 }
 
 .site-address .link{
     color: var(--primary-text-color);
     font-weight: 500;
     font-size: 14px;
-    line-height: 1.14
+    line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
 }
@@ -145,19 +144,17 @@ margin-right: 3opx;
 
 .hero{
     text-align: center;
-    padding: 200px 452px;
+    padding: 200px 0;
    
     background: #2F303A;
    
     }
 
 .hero-title{
-    margin-top: 0;
+    /* margin-top: 0; */
     margin-bottom: 30px;
 
-    outline: 2px solid: tomato;
-   
-    color: #FFFFFF;;
+    color: #FFFFFF;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.4;
@@ -166,12 +163,10 @@ margin-right: 3opx;
 }
 
 .button{
-    text-align: center;
     border-radius: 4px;
-    padding: 9px 31px;
-    min-width: 216px;
-    
 
+    border: none;
+    
     color: #FFFFFF;
     background: var(--text-accent);
     font-family: 'Roboto';
@@ -192,6 +187,10 @@ margin-right: 3opx;
     padding-top: 94px;
     padding-bottom: 94px;
 }
+
+.nopadding{
+    padding-top: 0;
+    }
 
 .section-title{
     margin-top: 0;
@@ -214,12 +213,24 @@ margin-right: 3opx;
     font-size: 36px;
     line-height: 1.17; 
 }
-
-
+/* 
 .desc section{
     margin-top: 0;
-    }
+   
+    } */
 
+ .desc{
+        display: flex;
+    gap: 30px;
+}
+            
+ 
+    
+.desc .item{
+   flex-basis: calc((100% - 90px) / 4);
+}
+
+.desc list 
 .desc-title{
     margin-bottom: 10px;
     text-align: center;
@@ -232,15 +243,16 @@ margin-right: 3opx;
 }
 
 .desc .text{
-    margin-bottom: 0;
+    /* margin-bottom: 0; */
 
     color: var(--primary-text-color);
     font-size: 14px;
     line-height: 1.71;
 }
 
-.image .list, 
+.images .list, 
 .team .list{
+    display: flex;
     gap: 30px;
 }
 
@@ -249,10 +261,7 @@ width: 370px;
 margin-right: 30px;
 }
 
-.box{
-width: 370px;
-margin-right: 30px;
-}
+
 
 .team{
     background: #F5F4FA;
@@ -264,13 +273,22 @@ margin-right: 30px;
     line-height: 1.19;
 }
 
-/* .team > .list{
-gap: 30px:
-} */
+.team .list{
+     /* flex-basis: calc((100%/3-60px); */
+/* gap: 30px: */
+}
 
 .picture{
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
+    text-align: center;
+
     background: #FFFFFF;
 } 
+
+.picture .wrap{
+    padding: 30px 0;
+}
 
 /* Footer */
 
@@ -328,9 +346,10 @@ gap: 30px:
 /* Portfolio */
 
 .list-button{
+    margin-bottom: 50px;
     display: flex;
     justify-content: center;
-    margin: 100px 0 50px 0;
+    /* margin: 100px 0 50px 0; */
 }
 
 .list-button .item:not(:last-child){
@@ -342,9 +361,7 @@ gap: 30px:
     padding: 6px 22px;
     min-width: 125px;
     min-height: 38px;
-    margin-bottom: 50px;
-
-
+    
     background: #F5F4FA;
     color: var(--title-text-color);
     cursor: pointer;
@@ -361,23 +378,19 @@ gap: 30px:
     color: #FFFFFF;;
 }
 
-.project-container{
-    display: flex;
-    flex-wrap: wrap;
-    width: 1230px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 .project-list{
     display: flex;
-    /* flex-wrap: wrap; */
-    /* gap: 30px; */
+    flex-wrap: wrap;
+    gap: 30px;
+
 }
 
 .element{
+    flex-basis: calc((100% - 60px) / 3);
+    
+}
+
+/* .element{
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
@@ -385,13 +398,13 @@ gap: 30px:
     margin-right: 30px; 
 } */
 
-.element:nth-child(3n){
+/* .element:nth-child(3n){
     margin-right: 0;
 }
 
 .element:nth-child(-n+3){
     margin-bottom: 0;
-}
+} */ */
 
 
 .portfolio-title{
@@ -408,6 +421,11 @@ gap: 30px:
     line-height: 1.88;
 }
 
+.border{
+    border: 1px solid #EEEEEE;
+    padding: 20px 24px;
+    border-top: none;
+}
 
 
 
