--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,6 @@ img{
     display: block;
 }
 
-
 .list{
     list-style: none;
     margin: 0;
@@ -54,7 +53,7 @@ img{
 
 /* Logo */
 .header{
-    border-bottom: 1px solid #ECECEC;;
+    border-bottom: 1px solid #ECECEC;
 }
 
 .header-logo{
@@ -92,7 +91,6 @@ img{
     display: flex; 
     gap: 50px; 
 }
-
 
 .site-nav .link{
     display: block;
@@ -146,12 +144,10 @@ margin-left: 50px;
     text-align: center;
     padding: 200px 0;
    
-    background: #2F303A;
-   
+    background: #2F303A; 
     }
 
 .hero-title{
-    /* margin-top: 0; */
     margin-bottom: 30px;
 
     color: #FFFFFF;
@@ -160,9 +156,11 @@ margin-left: 50px;
     line-height: 1.4;
     text-align: center;
     letter-spacing: 0.06em;
+    text-transform: uppercase;
 }
 
 .button{
+    padding: 10px 32px;
     border-radius: 4px;
 
     border: none;
@@ -213,27 +211,19 @@ margin-left: 50px;
     font-size: 36px;
     line-height: 1.17; 
 }
-/* 
-.desc section{
-    margin-top: 0;
-   
-    } */
 
  .desc{
-        display: flex;
+    display: flex;
     gap: 30px;
 }
-            
- 
-    
+             
 .desc .item{
    flex-basis: calc((100% - 90px) / 4);
 }
 
-.desc list 
+/* .desc .list  */
 .desc-title{
     margin-bottom: 10px;
-    text-align: center;
 
     color: var(--title-text-color);
     font-weight: 700;
@@ -243,8 +233,6 @@ margin-left: 50px;
 }
 
 .desc .text{
-    /* margin-bottom: 0; */
-
     color: var(--primary-text-color);
     font-size: 14px;
     line-height: 1.71;
@@ -261,8 +249,6 @@ width: 370px;
 margin-right: 30px;
 }
 
-
-
 .team{
     background: #F5F4FA;
 }
@@ -274,13 +260,12 @@ margin-right: 30px;
 }
 
 .team .list{
-     /* flex-basis: calc((100%/3-60px); */
-/* gap: 30px: */
+
 }
 
 .picture{
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
+    border-radius: 0px 0px 4px 4px;
     text-align: center;
 
     background: #FFFFFF;
@@ -296,7 +281,6 @@ border-radius: 0px 0px 4px 4px;
     padding-top: 60px;
     padding-bottom: 60px;
   
-
     background: #2F303A;
 }
 
@@ -343,13 +327,19 @@ border-radius: 0px 0px 4px 4px;
     margin-bottom: 9px;
 }
 
+.address-items{
+    margin-top: 20px;
+}
+
+.footer-address .item{
+    margin-top: 9px;
+}
 /* Portfolio */
 
 .list-button{
     margin-bottom: 50px;
     display: flex;
     justify-content: center;
-    /* margin: 100px 0 50px 0; */
 }
 
 .list-button .item:not(:last-child){
@@ -357,10 +347,9 @@ border-radius: 0px 0px 4px 4px;
 }
 
 .list-button .link{
+    border-style: none;
     border-radius: 4px;
     padding: 6px 22px;
-    min-width: 125px;
-    min-height: 38px;
     
     background: #F5F4FA;
     color: var(--title-text-color);
@@ -382,32 +371,14 @@ border-radius: 0px 0px 4px 4px;
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
-
 }
 
 .element{
-    flex-basis: calc((100% - 60px) / 3);
-    
+    flex-basis: calc((100% - 60px) / 3);    
 }
-
-/* .element{
-    width: 370px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    /* width: calc((100%-60px)/3);
-    margin-right: 30px; 
-} */
-
-/* .element:nth-child(3n){
-    margin-right: 0;
-}
-
-.element:nth-child(-n+3){
-    margin-bottom: 0;
-} */ */
-
 
 .portfolio-title{
+    margin-bottom: 4px;
     color: var(--title-text-color);
     font-weight: 700;
     font-size: 18px;
